--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Clone</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div id='navbar'>
+            <div id='logo'>Start Bootstrap</div>
+            <div id='menu'>
+                <div class='menu-item'>Services</div>
+                <div class='menu-item'>Portfolio</div>
+                <div class='menu-item'>About</div>
+                <div class='menu-item'>Team</div>
+                <div class='menu-item'>Contact</div>
+            </div>
+            <div class='hidden'>
+                Menu &#9776
+            </div>
+        </div>
+    </nav>
+    <header>
+        <div id='container'></div>
+    </header>
 </body>
+<script src='scripts.js'></script>
 </html>
